recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:11: error: illegal start of simple expression
    for(i <- ) to sides){
             ^PolygonFractal:15: error: ')' expected but '}' found.
  }
  ^