recursion.logo.polygonfractal.PolygonFractal.scala.code
def polygonFractal (levels:Int, sides:Int, length:Double, shrink:Double) {
  var angleI = (180*(sides-2))/sides
  var angleE = 180 - angleI
  if(levels==0){
    for(i <- 1 to sides){
      avance(length)
      droite(angleI)
    }
  }
  else{
    for(i <- ) to sides){
      polygonFractal(levels-1, sides, length*shrink, shrink)
      droite(angleI)
    }
  }
}